--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ header, footer {
     border-radius: 25px;
     padding: 20px;
     max-width: 1000px;
-    color: orange;
+    color: #57e2e5;
 }
 
 header{
@@ -37,11 +37,11 @@ footer ul li{
     padding-right: 6px;
 }
 footer a:link{
-    color: yellow;
+    color: #57e2e5;
 }
 
 footer a:visited{
-    color: tomato;
+    color: #e08dac;
 }
 
 #lastUpdated {
