--- a/css/style.css
+++ b/css/style.css
@@ -28,12 +28,18 @@ ul{
     list-style: none;
 }
 
-
+footer li {
+    float: left;
+}
+footer ul {
+    text-align: center;
+}
 
 footer ul li{
-    float: left;
+    display: inline;
     text-align: center;
     padding-right: 6px;
+    text-decoration: none;
 }
 footer a:link{
     color: #57e2e5;
@@ -41,6 +47,10 @@ footer a:link{
 
 footer a:visited{
     color: #e08dac;
+}
+
+footer {
+    text-align: center;
 }
 
 #lastUpdated {
